# Polyphonic-Pitch-Detector-for-guitars

./: .gitignore  CMakeLists.txt  README.md  clean-all.cmake  log_config.h.in  pdct_config.h.in  pdct_main.cpp
pdct_lib/: CMakeLists.txt
pdct_lib/Audio/: cJackProcess.h  cJackdDriver.cpp  cJackdDriver.h
pdct_lib/Gui/: cDisplayWidget.cpp  cDisplayWidget.h  cPdctApp.cpp  cPdctApp.h  cPdctSettings.cpp  cPdctSettings.h  cPdctSettingsDialog.cpp  cPdctSettingsDialog.h  cPdtcFrame.cpp  cPdtcFrame.h
pdct_lib/Main/: cLog.cpp  cLog.h  cPdctMain.cpp  cPdctMain.h  cPdctOptions.cpp  cPdctOptions.h  cPdctVersion.cpp  cPdctVersion.h  cSignal.cpp  cSignal.h  cSignalHandler.cpp  cSignalHandler.h  cStaticInitializer.cpp  cStaticInitializer.h
pdct_lib/Pdct/: cComplex.cpp  cComplex.h  cComplexResonator.cpp  cComplexResonator.h  cPdct.cpp  cPdct.h  cPdctOutput.cpp  cPdctOutput.h  cPdctSimul.cpp  cPdctSimul.h
pdct_lib/Source/: CMakeLists.txt  cAudioSource.cpp  cAudioSource.h  cBuffSource.cpp  cBuffSource.h  cSineSource.cpp  cSineSource.h  cSineWave.cpp  cSineWave.h  cWavSource.cpp  cWavSource.h
pdct_lib/include/: common_type.h  log_info.h
